--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -519,6 +519,8 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
@@ -547,27 +549,12 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/Combat/Weapons/Components/BPC_AttachWeapon.BPC_AttachWeapon
-OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks.BPC_LightAttacks
-OpenAssetsAtExit=/Game/Combat/Interfaces/BPI_Has_Weapon.BPI_Has_Weapon
-OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons.Struct_MeleeWeapons
-OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
-OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile
-OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics.Enum_Spell_Characteristics
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE.BPC_AOE
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing.BPC_Homing
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_Split.BPC_Split
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell.BPI_Spell
-OpenAssetsAtExit=/Game/Combat/Ranged/Components/BPC_Ranged_Attack.BPC_Ranged_Attack
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info.Struct_Spell_General_Info
-OpenAssetsAtExit=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info.Struct_Weapon_Info
-OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons.DT_MeleeWeapons
-OpenAssetsAtExit=/Game/Combat/Weapons/Enums/Enum_Weapon_Names.Enum_Weapon_Names
-OpenAssetsAtExit=/Game/Combat/Weapons/Interfaces/BPI_Melee.BPI_Melee
 
 [MessageLog]
 LastLogListing=PIE
@@ -2023,8 +2010,8 @@ K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 S_MeleeWeapon=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
-Struct_MeleeWeapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485
-Struct_Weapon_Info=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485
+Struct_MeleeWeapons=
+Struct_Weapon_Info=
 Struct_Ranged_Weapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 FMODSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BPC_Health_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
@@ -2068,36 +2055,36 @@ GameMapsSettings.DefaultModes=False
 StaticMeshActor.StaticMesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem1=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
-MRUItem2=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
-MRUItem3=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
-MRUItem4=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
-MRUItem5=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
-MRUItem6=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem7=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
-MRUItem8=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
-MRUItem9=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
-MRUItem10=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
-MRUItem11=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
-MRUItem12=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem13=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem14=/Game/Combat/Components/BPC_AttackHandler
-MRUItem15=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem16=/Game/Combat/Interfaces/BPI_Has_Weapon
-MRUItem17=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem18=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem19=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem20=/Game/Enemies/Structs_Tables/Struct_Character_Info
-MRUItem21=/Game/Enemies/Structs_Tables/Struct_Enemies
-MRUItem22=/Game/Player/Input/IMCs/IMC_Default
-MRUItem23=/Game/Player/Input/Actions/Ranged/IA_Next_Spell
-MRUItem24=/Game/Player/Input/Actions/Ranged/IA_Previous_Spell
-MRUItem25=/Game/Player/Input/Actions/Melee/IA_MeleeInput
-MRUItem26=/Game/Player/Input/Actions/General_Combat/IA_Attack
-MRUItem27=/Game/Health/Interfaces/BPI_Has_Health
-MRUItem28=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
-MRUItem29=/Game/Combat/Ranged/Components/BPC_Spells
+MRUItem0=/Game/Assets/Animations/Assets/Combat_Animations/DynamicKatanaAnimsV2/IP/Attack/Anim_DK2_Combo_A2_IP
+MRUItem1=/Game/Combat/Weapons/Interfaces/BPI_Melee
+MRUItem2=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
+MRUItem3=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem4=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem5=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem6=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem7=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem8=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
+MRUItem9=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem10=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
+MRUItem11=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
+MRUItem12=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
+MRUItem13=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem14=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem15=/Game/Combat/Components/BPC_AttackHandler
+MRUItem16=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem17=/Game/Combat/Interfaces/BPI_Has_Weapon
+MRUItem18=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem19=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem20=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem21=/Game/Enemies/Structs_Tables/Struct_Character_Info
+MRUItem22=/Game/Enemies/Structs_Tables/Struct_Enemies
+MRUItem23=/Game/Player/Input/IMCs/IMC_Default
+MRUItem24=/Game/Player/Input/Actions/Ranged/IA_Next_Spell
+MRUItem25=/Game/Player/Input/Actions/Ranged/IA_Previous_Spell
+MRUItem26=/Game/Player/Input/Actions/Melee/IA_MeleeInput
+MRUItem27=/Game/Player/Input/Actions/General_Combat/IA_Attack
+MRUItem28=/Game/Health/Interfaces/BPI_Has_Health
+MRUItem29=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion;
@@ -2186,6 +2173,8 @@ None=======
 /Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny=0
 /Game/Enemies/Structs_Tables/Struct_Enemies.Struct_Enemies=0
 /Game/Enemies/Structs_Tables/Struct_Character_Info.Struct_Character_Info=0
+/Game/Assets/Animations/Assets/Combat_Animations/DynamicKatanaAnimsV2/IP/Attack/Anim_DK2_Combo_A2_IP.Anim_DK2_Combo_A2_IP=1
+/Game/Combat/Weapons/Enums/Enum_Weapon_Names.Enum_Weapon_Names=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
