--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -535,6 +535,7 @@ None=======
 None=======
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=DataTableEditor
@@ -562,11 +563,11 @@ RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=
 OpenAssetsAtExit=/Game/Combat/Weapons/Struct_Tables/DT_Weapon_Info.DT_Weapon_Info
+OpenAssetsAtExit=/Game/Combat/Weapons/Interfaces/BPI_Weapon.BPI_Weapon
 OpenAssetsAtExit=/Game/Combat/Weapons/Interfaces/BPI_Melee.BPI_Melee
 OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
-OpenAssetsAtExit=/Game/Assets/Static_Meshes/Ranged/Staff.Staff
+OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
 OpenAssetsAtExit=/Game/Assets/Animations/ABPs/ABP_Player.ABP_Player
 OpenAssetsAtExit=/Game/Combat/Weapons/Components/BPC_AttachWeapon.BPC_AttachWeapon
 OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
@@ -2075,7 +2076,7 @@ BPC_Health_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.
 None=======
 None=======
 None=======
-Blueprint=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
+Blueprint=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 SkeletalMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 SkeletalMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 EdGraph=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
@@ -2086,7 +2087,7 @@ BP_ThirdPersonCharacter_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,Pro
 K2Node_FunctionEntry=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 BP_WeaponParent_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_CustomEvent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
-BPC_AttackHandler_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
+BPC_AttackHandler_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BPC_Spells_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BPC_Ranged_Attack_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
@@ -2101,13 +2102,14 @@ Split=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.Default
 Split_1=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 SceneComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 StaticMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
-CapsuleComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
+CapsuleComponent=
 StaticMeshActor=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings
-MeshNaniteSettings=StaticMesh.LOD0.MeshBuildSettings
+MeshNaniteSettings=
 ABP_Player_C=
 AnimStateConduitNode=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 AnimGraphNode_BlendListByBool=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+EdGraphNode=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2119,32 +2121,32 @@ GameMapsSettings.DefaultModes=False
 StaticMeshActor.StaticMesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Combat/Weapons/Interfaces/BPI_Weapon
-MRUItem1=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem2=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem3=/Game/Assets/Animations/ABPs/ABP_Player
-MRUItem4=/Game/Assets/Static_Meshes/Ranged/Staff
-MRUItem5=/Game/Combat/Weapons/Struct_Tables/DT_Weapon_Info
-MRUItem6=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem7=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem8=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
-MRUItem9=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
-MRUItem10=/Game/Combat/Weapons/Ranged/Structs_Tables/DT_Ranged_Weapons
-MRUItem11=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
-MRUItem12=/Game/Combat/Weapons/Melee/Enums/Enum_Melee_Weapon_Names
-MRUItem13=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
-MRUItem14=/Game/Combat/Weapons/Ranged/Enums/Enum_Ranged_Weapon_Names
-MRUItem15=/Game/Assets/Animations/Assets/Combat_Animations/DynamicKatanaAnimsV2/IP/Attack/Anim_DK2_Combo_A2_IP
-MRUItem16=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
-MRUItem17=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
-MRUItem18=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem19=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
-MRUItem20=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
-MRUItem21=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
-MRUItem22=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
-MRUItem23=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
-MRUItem24=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem25=/Game/Combat/Components/BPC_AttackHandler
+MRUItem0=/Game/Combat/Components/BPC_AttackHandler
+MRUItem1=/Game/Combat/Weapons/Interfaces/BPI_Weapon
+MRUItem2=/Game/Combat/Weapons/Interfaces/BPI_Melee
+MRUItem3=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem4=/Game/Assets/Animations/ABPs/ABP_Player
+MRUItem5=/Game/Assets/Static_Meshes/Ranged/Staff
+MRUItem6=/Game/Combat/Weapons/Struct_Tables/DT_Weapon_Info
+MRUItem7=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem8=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem9=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem10=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem11=/Game/Combat/Weapons/Ranged/Structs_Tables/DT_Ranged_Weapons
+MRUItem12=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
+MRUItem13=/Game/Combat/Weapons/Melee/Enums/Enum_Melee_Weapon_Names
+MRUItem14=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
+MRUItem15=/Game/Combat/Weapons/Ranged/Enums/Enum_Ranged_Weapon_Names
+MRUItem16=/Game/Assets/Animations/Assets/Combat_Animations/DynamicKatanaAnimsV2/IP/Attack/Anim_DK2_Combo_A2_IP
+MRUItem17=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem18=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem19=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem20=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
+MRUItem21=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem22=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
+MRUItem23=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
+MRUItem24=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
+MRUItem25=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
 MRUItem26=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
 MRUItem27=/Game/Combat/Interfaces/BPI_Has_Weapon
 MRUItem28=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
@@ -2250,6 +2252,7 @@ None=======
 /Game/Combat/Weapons/Ranged/Enums/Enum_Ranged_Weapon_Names.Enum_Ranged_Weapon_Names=1
 /Game/Combat/Weapons/Melee/Enums/Enum_Melee_Weapon_Names.Enum_Melee_Weapon_Names=1
 /Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons.Struct_Ranged_Weapons=1
+/Game/Assets/Static_Meshes/Ranged/Staff.Staff=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
